管理端权限加固、数据概览统计与文件上传安全修复
权限：拦截器新增接口级角色鉴权，普通用户token禁止访问管理端接口、管理员token禁止访问用户端接口（修复越权）；禁用用户自动清除其全部登录token立即踢下线；用户管理增加用户存在性校验。

订单/商品：发货接口增加空请求体防护；订单列表改为批量查询消除N+1；商品/规格增加数据校验（分类必须存在、规格名称/价格/库存合法性）；删除被订单引用的商品被拒绝以保护历史数据。

数据概览：新增管理端统计接口与页面（用户/商品/订单/销售额共10项指标），替换原写死的假数据。

文件上传：上传接口不再匿名放行（必须登录）；删除接口仅管理员可用；OTHER类型增加文档白名单（修复此类文件无法上传的bug）；图片增加魔数校验防止改后缀绕过类型白名单；存储目录前缀安全校验。

测试：新增13个测试用例（拦截器权限/用户踢下线/发货/商品/统计/文件上传），全量55个用例全部通过。